rag/yaml/base/milvus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: milvus
  name: milvus
spec:
  ports:
  - name: grpc
    port: 19530
    protocol: TCP
    targetPort: 19530
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  - name: etcd
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: milvus
status:
  loadBalancer: {}
